--- a/ECommerceApp/app/src/main/res/values/strings.xml
+++ b/ECommerceApp/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="wewishuhappy">We wish you a happy working day</string>
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
+    <string name="judul">Selamat Datang</string>
+    <string name="peringatan">Masukkan Data yang terdaftar</string>
+    <string-array name="jenisbrg">
+        <item>Kaos</item>
+        <item>Kemeja</item>
+    </string-array>
 </resources>
