--- a/ECommerceApp/app/src/main/res/values/strings.xml
+++ b/ECommerceApp/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
         <item>Kaos</item>
         <item>Kemeja</item>
     </string-array>
+    <string name="staff_login">Staff Login</string>
 </resources>
